# jianying-editor-skill

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: test_tts.py
scripts/: build_cloud_music_library.py  build_cloud_text_styles_library.py  draft_inspector.py  jy_wrapper.py  sami_sniffer.py  sami_speaker_extractor.py
scripts/jy_core/: media_ops.py  mocking_ops.py  sticker_ops.py  text_ops.py
scripts/utils/: mac_draft_patcher.py  mac_staging.py  platform_detect.py
tests/: test_wrapper.py
tools/recording/: recorder.py
